src/objects/CPQ_Output_Line_Item__c.object
<CustomObject>
    <description>Holds Proposal line items, will use those line items to generate Proposal document</description>
    <fields>
        <fullName>CPQ_Asset_Line_Quantity__c</fullName>
        <description>FRU quantity taking From FRU line item, Populated through trigger</description>
        <inlineHelpText>FRU quantity taking From FRU line item, Populated through trigger</inlineHelpText>
        <label>Asset Line Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Customer_Item_Code__c</fullName>
        <description>Reference to Customer Item Code from a custom object. Populated from line item through the trigger</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to Customer Item Code from a custom object. Populated from line item through the trigger</inlineHelpText>
        <label>Customer Item Code</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_DA_Unit_Price__c</fullName>
        <description>Base unit price to be used in quote documents. populated through Trigger</description>
        <inlineHelpText>Base unit price to be used in quote documents. populated through Trigger</inlineHelpText>
        <label>DA Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Description__c</fullName>
        <description>The final product name is Pouplated here through Trigger from PLI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CPQ_Line_Number__c</fullName>
        <description>The line item number will be populated through trigger and used in a template</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Net_Price__c</fullName>
        <description>Net price taking from PLI. populated through Trigger</description>
        <inlineHelpText>Net price taking from PLI. populated through Trigger</inlineHelpText>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Net_Unit_Price__c</fullName>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Number__c</fullName>
        <displayFormat>L-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CPQ_Output_Quote_Proposal__c</fullName>
        <inlineHelpText>Using this for Template</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Output Line Items</relationshipLabel>
        <relationshipName>CPQ_Output_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Class__c</fullName>
        <description>Reference to the price class from line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the price class from line item</inlineHelpText>
        <label>Price Class</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CPQ_Quantity_2__c</fullName>
        <description>The product or service quantity</description>
        <inlineHelpText>The product or service quantity</inlineHelpText>
        <label>Quantity (2)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Secondary_Category__c</fullName>
        <description>Reference to secondary category for the product. API Name twinning from line item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to secondary category for the product. API Name twinning from line item</inlineHelpText>
        <label>Secondary Category</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Sub_Heading__c</fullName>
        <description>Used in Surround CPQ/QTC output templates.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used in Surround CPQ/QTC output templates.</inlineHelpText>
        <label>Sub Heading</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Transportation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transportation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Heading</fullName>
                </value>
                <value>
                    <fullName>Line Item</fullName>
                </value>
                <value>
                    <fullName>FRU</fullName>
                </value>
                <value>
                    <fullName>Space</fullName>
                </value>
                <value>
                    <fullName>Child Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Output Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CPQ_Line_Number__c</columns>
        <columns>CPQ_Product_Code__c</columns>
        <columns>CPQ_Description__c</columns>
        <columns>CPQ_Sub_Heading__c</columns>
        <columns>CPQ_Secondary_Category__c</columns>
        <columns>CPQ_Price_Class__c</columns>
        <columns>CPQ_Type__c</columns>
        <columns>CPQ_Output_Quote_Proposal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OLI-{00000}</displayFormat>
        <label>Output Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Output Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>